# example-ucs01-cosmwasm

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs
