[package]
name = "transfer-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0", default-features = false, features = ["staking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.13.0"

[profile.release]
opt-level = "z"