[package]
name = "example-ucs01-cosmwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", 'rlib']

[dependencies]
cosmwasm-std = { version = "2.1.4", default-features = false, features = ["std", "staking", "stargate"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
thiserror = { version = "1.0.64", default-features = false }

[dev-dependencies]
cw-multi-test = "0.13.0"

[profile.release]
opt-level = "z"
strip = true
